# stockagentfrontend

./: README.md
agent/: main.py  pyproject.toml  requirements.txt  stock_analysis.py
frontend/src/app/: page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/components/chart-components/: line-chart.tsx
